[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "string-decorator"
version = "0.3.0"
authors = [{name = "imEternity"}]
license = {file = "LICENSE"}
keywords = ["string", "decorator", "case", "changer"]
readme = "README.md"
description = "Python package for playing with strings"
dependencies = ["colorama"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Utilities",
  "Topic :: Text Processing :: General"
]

[project.urls]
"Homepage" = "https://github.com/eternity2745/string-decorator#readme"
"Repository" = "https://github.com/eternity2745/string-decorator"
